--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,8 @@ bind -r C-l resize-pane -R
 
 # reload tmux source
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+set -g default-shell ${SHELL} 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g default-terminal "screen-256color"
 
