update tmux and add a view alias'

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,14 @@ bind-key C-a send-prefix        # allow sending prefix to inner tmux session
 
 set -sg escape-time 1    # issue keystrokes without delay
 
-setw -g mode-keys vi
+setw -g mode-keys vi # Use Vim keybindings
+
+
+# rebind split window keys
+unbind '"'
+unbind '%'
+bind-key \ split-window -h
+bind-key - split-window -v
 
 bind h select-pane -L
 bind j select-pane -D
