--- a/tmux.conf
+++ b/tmux.conf
@@ -8,9 +8,7 @@ setw -g mode-keys vi # Use Vim keybindings
 
 
 # rebind split window keys
-unbind '"'
-unbind '%'
-bind-key \ split-window -h
+bind-key | split-window -h
 bind-key - split-window -v
 
 bind h select-pane -L
@@ -39,7 +37,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+#bind-key -n C-| if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 run-shell "powerline-daemon -q"
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/Users/john/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
